[package]
name = "blog"
version = "0.1.0"
authors = ["Jose Narvaez <goyox86@gmail.com>"]
build = "build.rs"

[build-dependencies]
diesel_codegen_syntex = { version = "0.9.0", features = ["postgres"], optional = true }

[dependencies]
diesel = "0.9.1"
diesel_codegen = { version = "0.9.0", features = ["postgres"], optional = true }
dotenv = "0.8.0"
toml = "0.2"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_codegen = "0.1.6"

[features]
default = ["nightly"]
with-syntex = ["diesel_codegen_syntex"]
nightly = ["diesel/unstable", "diesel_codegen"]
